<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pulkit.darcpleazurchocolates.AddressActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4sp"
        android:text="@string/edit_your_address"
        android:textColor="@color/com_facebook_button_login_background_color"
        android:textSize="25sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:hint="@string/full_name"
                android:inputType="textCapWords"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:hint="@string/_10_digit_mobile_no"
                android:paddingStart="10dp"
                android:textSize="20sp"
                android:inputType="phone"
                android:maxLength="10"
                />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:hint="@string/_6_digits_pincode"
                android:paddingStart="10dp"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addressline1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:hint="@string/address_line_1"
                android:paddingStart="10dp"
                android:inputType="textCapWords"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:inputType="textCapWords"
                android:hint="@string/landmark"
                android:paddingStart="10dp"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:inputType="textCapWords"
                android:hint="@string/city"
                android:paddingStart="10dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:hint="@string/state"
                android:inputType="textCapWords"
                android:paddingStart="10dp"
                android:textSize="20sp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_address"
        android:onClick="saveaddress"/>

</LinearLayout>
